@@ -44,13 +44,13 @@ def register():
         Period,
         Journal,
         JournalSequence,
-        JournalAccount,
         JournalCashContext,
         JournalPeriod,
         Move,
         Reconciliation,
         ConfigurationTaxRounding,
         Line,
+        WriteOff,
         OpenJournalAsk,
         ReconcileLinesWriteOff,
         ReconcileShow,
