@@ -14,10 +14,6 @@ this repository contains the full copyright notices and license terms. -->
             <field name="type"/>
             <label name="sequence"/>
             <field name="sequence"/>
-            <label name="debit_account"/>
-            <field name="debit_account"/>
-            <label name="credit_account"/>
-            <field name="credit_account"/>
         </page>
     </notebook>
 </form>
