@@ -1,0 +1,17 @@
+<?xml version="1.0"?>
+<!-- This file is part of Tryton.  The COPYRIGHT file at the top level of
+this repository contains the full copyright notices and license terms. -->
+<form>
+    <label name="name"/>
+    <field name="name"/>
+    <label name="active"/>
+    <field name="active"/>
+    <label name="journal"/>
+    <field name="journal"/>
+    <label name="company"/>
+    <field name="company"/>
+    <label name="debit_account"/>
+    <field name="debit_account"/>
+    <label name="credit_account"/>
+    <field name="credit_account"/>
+</form>
